syntax = "proto3";

option java_multiple_files = true;
option java_package = "ru.nikitavov.scheduleClasses.grpc";

enum MessageCode{
  EMPTY = 0;
  SUCCESS = 1;
  PASS = 2;
  DUPLICATE = 3;
  INVALID_DATA = 4;
  ACCESS_DENIED = 5;
  NOT_FOUND = 6;
  INTEGRITY_ERROR = 7;
}